--- a/build.gradle
+++ b/build.gradle
@@ -1,28 +1,24 @@
 apply plugin: 'cpp'
 apply from: 'common.gradle'
 
-
 def coverageEnabled = System.getProperty('enableCoverage')
 
+// TODO: REMOVE once alternative is done.
 configurations {
-    ansdk
-
     apache
-
     googletest
-    sonar
-    cobertura
 }
 
 project.ext {
     // To do a 32-bit build, pass "-Dos.arch=x86"
     platBuildDir = "${buildDir}/${osName}-${osArch}"
-    ansdkDir = "${platBuildDir}/appdynamics-native-sdk/1.0-73"
+    modDepDir = "${platBuildDir}/module-dependencies"
 
+    // TODO: REMOVE FROM HERE *********
     nexus3BaseUrl="https://nexus3.corp.appdynamics.com/repository/"
-
     nexus3BuildRepos="maven-releases maven-snapshots build-plugins"
     nexus3PluginRepos="maven-releases build-plugins third-party-lib gradle-plugins"
+    // REMOVE TILL HERE ***************
 
     debug = false
 
@@ -73,15 +69,12 @@ project.ext {
     apache24Version = "2.4.23"
     aprVersion = '1.5.2'
     aprUtilVersion = '1.5.4'
-    sonarScannerVersion = '2.6.1'
-    coberturaVersion = '1.6'
     nginxVersion = '1.18.0'
 
-    boostDir = "${ansdkDir}/boost/1.55.0"
+    boostDir = "${modDepDir}/boost/1.55.0"
 
-    libraryStageDir = "${platBuildDir}/appdynamics-sdk-native"
-    apacheStageDir = "${libraryStageDir}/WebServerAgent/Apache"
-    nginxStageDir = "${libraryStageDir}/WebServerAgent/Nginx"
+    libraryStageDir = "${platBuildDir}/opentelemetry-webserver-sdk"
+    apacheStageDir = "${libraryStageDir}/WebServerModule/Apache"
 
     coverageCompilerFlags = '-g -fprofile-arcs -ftest-coverage'
     coverageLinkerFlags = '-lgcov --coverage'
@@ -91,30 +84,24 @@ project.ext {
     LCOV_INFO = "${COVERAGE_DIR}/lcov.info"
 }
 
+// TODO: REMOVE The following dependencies once alternative is done.
 dependencies {
-    ansdk "com.appdynamics:appdynamics-native-sdk:$ansdkOsName-$ansdkArch-1.0-73"
-
-    // TODO: Do we need to setup the dependency of Aggregator here???
-    //sdklibProxy project(path: ':apache_agent:sdk_native:proxy', configuration: 'nativeSDK')
-    //apacheProxy project(path: ':apache_agent:sdk_native:proxy', configuration: 'nativeWebServer')
     apache "org.apache:httpd-2.2-src:${apache22Version}@bz2"
     apache "org.apache:httpd-2.4-src:${apache24Version}@bz2"
     apache "org.apache:apr:${aprVersion}@tbz2"
     apache "org.apache:apr-util:${aprUtilVersion}@tbz2"
 
     googletest group: 'com.google.gmock', name: 'googletest', version: '1.10.0', ext: 'tar.gz'
-    sonar "org.sonarsource.scanner.cli:sonar-scanner-cli:${sonarScannerVersion}@zip"
-    cobertura "Python:lcov_cobertura:${coberturaVersion}@gz"
 }
 
 task extractOpenTelemetrySdk(type: Copy) {
     from "dependencies/opentelemetry"
-    into "${ansdkDir}/opentelemetry"
+    into "${modDepDir}/opentelemetry"
 }
 
 task extractANSDK(type: Copy) {
     from "dependencies/ansdk"
-    into ansdkDir
+    into modDepDir
 
     //inputs.files configurations.ansdk
     //from { configurations.ansdk.collect { tarTree(it) } }
@@ -186,7 +173,7 @@ task gypLibrary(type: Exec) {
 
     ext.libraryBuildEnvironment = [
         ARCH_FLAG: gccArchFlag,
-        ANSDK_DIR: ansdkDir,
+        ANSDK_DIR: modDepDir,
         COMPILER_FLAGS: (coverageEnabled) ? coverageCompilerFlags : '',
         LINKER_FLAGS: (coverageEnabled) ? coverageLinkerFlags : '',
     ]
@@ -205,7 +192,7 @@ task buildLibrary(type: Exec) {
     inputs.property "buildType", buildType
     inputs.dir 'src/util'
 
-    outputs.file "${platBuildDir}/out/Default/lib.target/libappdynamics_native_sdk.so"
+    outputs.file "${platBuildDir}/out/Default/lib.target/libopentelemetry_webserver_sdk.so"
 
     args = ['make', 'V=1', '-j', Runtime.runtime.availableProcessors()]
 
@@ -229,11 +216,11 @@ task stageLibrary(type: Copy) {
 
     from("src/sdk_lib/src/api/include/appdynamics.h") { it.into "sdk_lib" }
     from(buildLibrary) { it.into "sdk_lib/lib" }
-    from("${ansdkDir}/opentelemetry/lib/libopentelemetry_common.so") { it.into "sdk_lib/lib" }
-    from("${ansdkDir}/opentelemetry/lib/libopentelemetry_resources.so") { it.into "sdk_lib/lib" }
-    from("${ansdkDir}/opentelemetry/lib/libopentelemetry_trace.so") { it.into "sdk_lib/lib" }
-    from("${ansdkDir}/opentelemetry/lib/libopentelemetry_exporter_ostream_span.so") { it.into "sdk_lib/lib" }
-    from("${ansdkDir}/opentelemetry/lib/libopentelemetry_exporter_otprotocol.so") { it.into "sdk_lib/lib" }
+    from("${modDepDir}/opentelemetry/lib/libopentelemetry_common.so") { it.into "sdk_lib/lib" }
+    from("${modDepDir}/opentelemetry/lib/libopentelemetry_resources.so") { it.into "sdk_lib/lib" }
+    from("${modDepDir}/opentelemetry/lib/libopentelemetry_trace.so") { it.into "sdk_lib/lib" }
+    from("${modDepDir}/opentelemetry/lib/libopentelemetry_exporter_ostream_span.so") { it.into "sdk_lib/lib" }
+    from("${modDepDir}/opentelemetry/lib/libopentelemetry_exporter_otprotocol.so") { it.into "sdk_lib/lib" }
     from("dist/appdynamics_sdk_log4cxx.xml.template") { it.into "conf" }
     from("dist/install.${scriptExt}") { it.fileMode 0700 }
 
@@ -247,10 +234,10 @@ task stripLibrary(type: Exec) {
     onlyIf { !debug }
 
     inputs.dir stageLibrary
-    outputs.dir "${libraryStageDir}/sdk_lib/lib/libappdynamics_native_sdk.${sharedLibraryExt}"
+    outputs.dir "${libraryStageDir}/sdk_lib/lib/libopentelemetry_webserver_sdk.${sharedLibraryExt}"
 
     workingDir "${libraryStageDir}/sdk_lib/lib"
-    commandLine 'strip', '-x', "libappdynamics_native_sdk.${sharedLibraryExt}"
+    commandLine 'strip', '-x', "libopentelemetry_webserver_sdk.${sharedLibraryExt}"
 }
 
 task assembleLibrary(type: Tar) {
@@ -260,8 +247,8 @@ task assembleLibrary(type: Tar) {
     dependsOn stripLibrary
 
     from stageLibrary
-    baseName 'appdynamics-sdk-native'
-    into 'appdynamics-sdk-native'
+    baseName 'opentelemetry-webserver-sdk'
+    into 'opentelemetry-webserver-sdk'
     destinationDir buildDir
     compression Compression.GZIP
 }
@@ -342,7 +329,7 @@ task gypApacheAgent(type: Exec) {
         APACHE22_INCLUDE_DIR: "${platBuildDir}/httpd-${apache22Version}/include",
         APACHE24_INCLUDE_DIR: "${platBuildDir}/httpd-${apache24Version}/include",
         APPD_SDK_LIB_DIR: "${libraryStageDir}/sdk_lib",
-        ANSDK_DIR: ansdkDir,
+        ANSDK_DIR: modDepDir,
         COMPILER_FLAGS: (coverageEnabled) ? coverageCompilerFlags : '',
         LINKER_FLAGS: (coverageEnabled) ? coverageLinkerFlags : '',
     ]
@@ -362,8 +349,8 @@ task buildApacheAgent(type: Exec) {
     inputs.dir 'src/nginx'
     inputs.dir 'src/core'
 
-    outputs.file "${platBuildDir}/apache/out/Default/lib.target/libmod_appdynamics.so"
-    outputs.file "${platBuildDir}/apache/out/Default/lib.target/libmod_appdynamics22.so"
+    outputs.file "${platBuildDir}/apache/out/Default/lib.target/libmod_apache.so"
+    outputs.file "${platBuildDir}/apache/out/Default/lib.target/libmod_apache22.so"
 
     args = ['make', 'V=1', '-j', Runtime.runtime.availableProcessors()]
 
@@ -393,11 +380,11 @@ task stripApacheAgent(type: Exec) {
     onlyIf { !debug }
 
     inputs.dir stageApacheAgent
-    outputs.dir "${apacheStageDir}/libappdynamics_native_sdk.${sharedLibraryExt}"
+    outputs.dir "${apacheStageDir}/libopentelemetry_webserver_sdk.${sharedLibraryExt}"
 
     workingDir apacheStageDir
-    commandLine 'strip', '-x', "libmod_appdynamics.${sharedLibraryExt}"
-    commandLine 'strip', '-x', "libmod_appdynamics22.${sharedLibraryExt}"
+    commandLine 'strip', '-x', "libmod_apache.${sharedLibraryExt}"
+    commandLine 'strip', '-x', "libmod_apache22.${sharedLibraryExt}"
 }
 
 task assembleApacheAgent(type: Tar) {
@@ -408,102 +395,8 @@ task assembleApacheAgent(type: Tar) {
     //dependsOn stageWebServerProxy
 
     from libraryStageDir
-    baseName "appdynamics-webserver-sdk-${osArch}-${osName}"
-    into 'appdynamics-sdk-native'
-    destinationDir file(buildDir)
-    compression Compression.GZIP
-}
-
-// NGINX
-
-// Currently, going with putting Nginx source file in the dependencies dir
-// TODO: will upload Nginx source file on Nexus along with other dependent lib files once everything is finalized.
-task extractNginx(type: Copy) {
-    //dependsOn configurations.nginx
-    //from { configurations.nginx.collect {println it; tarTree(it) } }
-    //into buildDir
-    from "dependencies/ansdk"
-    into buildDir
-}
-
-task configureNginx(type: Exec){
-    group = 'Nginx Web Server Agent'
-    description = 'Run configure to generate the build files for Nginx Web Server Agent'
-
-    dependsOn extractNginx
-
-    workingDir "${buildDir}/nginx-${nginxVersion}"
-    commandLine './configure', "--with-compat", "--with-cc-opt=-Wno-error -Wno-unused-variable -Wno-unused-but-set-variable", "--with-ld-opt=-L${libraryStageDir}/sdk_lib/lib", "--add-dynamic-module=${projectDir}/src/nginx"
-}
-
-task delMakefile(type: Exec){
-    group = 'Nginx Web Server Agent'
-    description = 'Deleting old Makefile'
-
-    workingDir "${buildDir}/nginx-${nginxVersion}/objs"
-    commandLine 'rm', '-rf', 'Makefile'
-}
-
-task copyMakefile(type: Copy){
-    group = 'Nginx Web Server Agent'
-    description = 'Copying Makefile for compiling Nginx Web Server Agent'
-
-    dependsOn delMakefile
-
-    from "src/nginx/Makefile"
-    into "${buildDir}/nginx-${nginxVersion}/objs/"
-}
-
-task buildNginxAgent(type: Exec) {
-    group = 'Nginx Web Server Agent'
-    description = 'Build the Nginx Web Server Agent'
-
-    dependsOn configureNginx
-    dependsOn stageLibrary
-    dependsOn copyMakefile
-
-    outputs.file "${buildDir}/nginx-${nginxVersion}/objs/ngx_http_appdynamics_module.so"
-
-    workingDir "${buildDir}/nginx-${nginxVersion}"
-    commandLine 'make', 'modules'
-}
-
-task stageNginxAgent(type: Copy) {
-    group = 'Nginx Web Server Agent'
-    description = 'Stage the Nginx Web Server Agent distribution directory'
-
-//    dependsOn stageLibrary
-
-    from buildNginxAgent
-    into nginxStageDir
-}
-
-task stripNginxAgent(type: Exec){
-    group = 'Nginx Web Server Agent'
-    description = 'Strip the production Nginx Web Server Agent'
-
-    dependsOn stageNginxAgent
-
-    onlyIf { !debug }
-
-    inputs.dir stageNginxAgent
-    outputs.file "${nginxStageDir}/ngx_http_appdynamics_module.${sharedLibraryExt}"
-
-    workingDir nginxStageDir
-    commandLine 'strip', '-x', "ngx_http_appdynamics_module.${sharedLibraryExt}"
-}
-
-// Packages the complete Web Server Agent
-task assembleWebServerAgent(type: Tar) {
-    group = 'Web Server Agent'
-    description = 'Assemble the Web Server agent artifact (tgz)'
-
-    dependsOn stripApacheAgent
-    dependsOn stripNginxAgent
-
-    from libraryStageDir
-    baseName "appdynamics-webserver-sdk-${osArch}-${osName}"
-    into 'appdynamics-sdk-native'
+    baseName "opentelemetry-webserver-sdk-${osArch}-${osName}"
+    into 'opentelemetry-webserver-sdk'
     destinationDir file(buildDir)
     compression Compression.GZIP
 }
@@ -513,7 +406,7 @@ task assembleWebServerAgent(type: Tar) {
 task extractGoogleTest(type: Copy) {
     dependsOn configurations.googletest
     from { configurations.googletest.collect { tarTree(it) } }
-    into ansdkDir
+    into modDepDir
 }
 
 task gypUnitTest(type: Exec) {
@@ -524,7 +417,7 @@ task gypUnitTest(type: Exec) {
 
     ext.testBuildEnvironment = [
         APPD_SDK_LIB_DIR: "${libraryStageDir}/sdk_lib",
-        ANSDK_DIR: ansdkDir
+        ANSDK_DIR: modDepDir
     ]
 
     environment testBuildEnvironment
@@ -620,118 +513,6 @@ task coverageHtml(type: Exec) {
        lcov.tracefile
 }
 
-// Sonar
-
-task extractSonar(type: Copy) {
-  group = 'Code Analysis'
-  description = 'downloads SonarScanner CLI'
-
-  from {
-    configurations.sonar.collect {
-      zipTree(it)
-    }
-  }
-
-  into buildDir
-}
-
-task extractCobertura(type: Copy) {
-  group = 'Code Analysis'
-  description = 'downloads a converter from lcov format to Cobertura XML'
-
-  from {
-    configurations.cobertura.collect {
-      tarTree(it)
-    }
-  }
-
-  into buildDir
-}
-
-task cobertura(type: Exec) {
-  group = 'Code Analysis'
-  description = 'converts coverage info to Cobertura XML'
-
-  dependsOn extractCobertura
-  dependsOn lcov
-
-  inputs.file lcov.tracefile
-  outputs.file file('coverage-report.xml')
-
-  executable "${buildDir}/lcov_cobertura-${coberturaVersion}/lcov_cobertura/lcov_cobertura.py"
-  args lcov.tracefile,
-       '--output', file('coverage-report.xml')
-}
-
-task sonar(type: Exec) {
-  group = 'Code Analysis'
-  description = 'publishes analysis reports to Sonarqube server'
-
-  dependsOn extractSonar
-
-  dependsOn cobertura
-
-  inputs.files file('coverage-report.xml')
-
-  executable "${buildDir}/sonar-scanner-${sonarScannerVersion}/bin/sonar-scanner"
-  args "-Dsonar.host.url=${System.env.SONAR_HOST_URL}",
-       "-Dsonar.login=${System.env.SONAR_LOGIN}",
-       "-Dsonar.branch.name=${System.env.BUILD_REF_NAME}",
-       "-Dsonar.projectVersion=${System.env.BUILD_NUMBER}"
-}
-
-/*task gypSanity(type: Exec) {
-    inputs.file 'samples/cpp/simple/sanity/sanity.gyp'
-    outputs.dir "${platBuildDir}/sanity"
-
-    workingDir 'samples/cpp/simple/sanity'
-    commandLine gypPath, "--generator-output=${platBuildDir}/sanity", '--toplevel-dir=.', '--depth=./', '-f', gypType, 'sanity.gyp'
-}
-
-task makeSanity(type: Exec) {
-    inputs.dir stageLibrary
-    inputs.dir gypSanity
-    inputs.dir 'samples/cpp/simple/sanity'
-
-    outputs.file "${platBuildDir}/sanity/out/Default/sanity"
-    outputs.file "${platBuildDir}/sanity/out/Default/sanity-raii"
-
-    environment SDK_INSTALL: libraryStageDir
-    workingDir "${platBuildDir}/sanity"
-    commandLine 'make', 'V=1'
-}
-
-task copyLibraryInstall(type: Copy) {
-    from libraryStageDir
-    into "${platBuildDir}/sanity/sdk"
-
-    doLast {
-        file("${platBuildDir}/sanity/sdk/logs/appd-sdk").mkdirs()
-    }
-}
-
-task runSanity(type: Exec) {
-    inputs.files makeSanity
-    inputs.files copyLibraryInstall
-
-    environment LD_LIBRARY_PATH: "${platBuildDir}/sanity/sdk/sdk_lib/lib",
-                APPD_SDK_LOG_CONFIG_PATH: file("samples/cpp/simple/sanity/log4cxx.xml")
-
-    workingDir "${platBuildDir}/sanity/out/Default"
-    commandLine './sanity'
-}
-
-task runSanityCpp(type: Exec) {
-    inputs.files makeSanity
-    inputs.files copyLibraryInstall
-
-    environment LD_LIBRARY_PATH: "${platBuildDir}/sanity/sdk/sdk_lib/lib",
-                APPD_SDK_LOG_CONFIG_PATH: file("samples/cpp/simple/sanity/log4cxx.xml")
-
-    workingDir "${platBuildDir}/sanity/out/Default"
-    commandLine './sanity-raii'
-}*/
-
 model {
     buildTypes {
         debug
@@ -775,7 +556,7 @@ model {
                 headers.srcDirs "${libraryStageDir}/sdk_lib"
                 // See FIXME on sources.cpp.lib library: 'appd' above
                 // binaries.withType(SharedLibraryBinary) {
-                //     sharedLibraryFile = file("${libraryStageDir}/sdk_lib/lib/libappdynamics_native_sdk.so")
+                //     sharedLibraryFile = file("${libraryStageDir}/sdk_lib/lib/libopentelemetry_webserver_sdk.so")
                 // }
             }
         }
