--- a/version.properties
+++ b/version.properties
@@ -1,5 +1,2 @@
-#Fri, 05 Jun 2015 18:06:37 -0700
-# This is the lowest controller version that we are compatible with
-controllerDependencyVersion=4.4.1.0
-server-agent-version=21.6.0
+server-module-version=1.0.0
 release=GA
