--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,7 @@ project.ext {
     moduleRelease = props.get("release")
     moduleName = "WebServer Module"
     buildType = "Release Build"
-    fullVersion = "${moduleName} ${moduleVersion} ${moduleRelease} r${headSHA1}: ${buildType}"
+    fullVersion = "${moduleName} ${moduleVersion} ${moduleRelease} ${headSHA1}: ${buildType}"
 
     gypPath = "$projectDir/scripts/gyp/r1919/gyp"
     gypType = 'make'
@@ -59,11 +59,6 @@ project.ext {
     COVERAGE_DIR = "${platBuildDir}/coverage"
     LCOV_RAW_INFO = "${COVERAGE_DIR}/lcov-raw.info"
     LCOV_INFO = "${COVERAGE_DIR}/lcov.info"
-}
-
-task extractOpenTelemetrySdk(type: Copy) {
-    from "dependencies/opentelemetry"
-    into "${modDepDir}/opentelemetry"
 }
 
 task extractANSDK(type: Copy) {
@@ -104,7 +99,6 @@ task generateSources {
     group = 'SDK Library'
     description = 'Generate all sources'
 
-    // TODO : Enable the module version header generation once code will be there
     dependsOn generateVersionFile, generateModuleVersionHeader
 }
 
@@ -149,7 +143,6 @@ task buildLibrary(type: Exec) {
     description = 'Compile the SDK library'
 
     dependsOn gypLibrary
-    //dependsOn extractOpenTelemetrySdk
     inputs.property "buildType", buildType
     inputs.dir 'src/util'
 
@@ -159,7 +152,6 @@ task buildLibrary(type: Exec) {
 
     environment gypLibrary.libraryBuildEnvironment
     workingDir "${platBuildDir}"
-    //workingDir "${platBuildDir}/sdk_lib"
     commandLine args
 }
 
@@ -393,7 +385,6 @@ task runUnitTest(type: Exec) {
     dependsOn makeUnitTest
     environment gypUnitTest.testBuildEnvironment
 
-    //environment "LD_LIBRARY_PATH", "${platBuildDir}/out/Default/lib.target/"
     environment "LD_LIBRARY_PATH", "${libraryStageDir}/sdk_lib/lib/"
 
     workingDir "${platBuildDir}/unit_test/out/Default"
