--- a/opentelemetry_module.conf
+++ b/opentelemetry_module.conf
@@ -7,7 +7,7 @@ LoadFile /opt/opentelemetry-webserver-sdk/sdk_lib/lib/libopentelemetry_exporter_
 #Load the AppDynamics SDK
 LoadFile /opt/opentelemetry-webserver-sdk/sdk_lib/lib/libopentelemetry_webserver_sdk.so
 #Load the Apache Agent. In this example for Apache 2.2
-LoadModule appdynamics_module /opt/opentelemetry-webserver-sdk/WebServerModule/Apache/libmod_apache_otel22.so
+LoadModule otel_apache_module /opt/opentelemetry-webserver-sdk/WebServerModule/Apache/libmod_apache_otel22.so
 AppDynamicsEnabled ON
 #AppDynamics Otel Exporter details
 AppDynamicsOtelSpanExporter otlp
