--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,39 @@
 version: "3.9"
+networks:
+    default:
+        external:
+            name: webserver-network
 services:
     webserver:
         build:
             context: .
             dockerfile: Dockerfile
         image: apache
-        volumes:
-            - .:/otel-webserver-module
         hostname: webserver
         container_name: webserver
-        entrypoint: ["bash", "./build.sh"]
+        command: bash -c " httpd -k start && tail -f /dev/null "
+        ports:
+            - "8000:80"
+        depends_on:
+            - otel-collector
+# Collector
+    otel-collector:
+        image: otel/opentelemetry-collector:latest
+        container_name: collector
+        command: ["--config=/etc/otel-config.yml", "--log-level=DEBUG", "${OTELCOL_ARGS}"]
+        volumes:
+            - ./otel-config.yml:/etc/otel-config.yml
+        ports:
+            - "4317:4317" # grpc
+            - "55678:55678"
+            - "55679:55679"
+        depends_on:
+            - zipkin
+
+# Zipkin
+    zipkin:
+        image: openzipkin/zipkin:latest
+        container_name: zipkin
+        ports:
+            - "9411:9411"
+            - "9410:9410"
