--- a/opentelemetry_module.conf
+++ b/opentelemetry_module.conf
@@ -4,31 +4,34 @@ LoadFile /opt/opentelemetry-webserver-sdk/sdk_lib/lib/libopentelemetry_trace.so
 LoadFile /opt/opentelemetry-webserver-sdk/sdk_lib/lib/libopentelemetry_exporter_ostream_span.so
 LoadFile /opt/opentelemetry-webserver-sdk/sdk_lib/lib/libopentelemetry_exporter_otprotocol.so
 
-#Load the AppDynamics SDK
+#Load the ApacheModule SDK
 LoadFile /opt/opentelemetry-webserver-sdk/sdk_lib/lib/libopentelemetry_webserver_sdk.so
-#Load the Apache Agent. In this example for Apache 2.2
+#Load the Apache Module. In this example for Apache 2.2
 LoadModule otel_apache_module /opt/opentelemetry-webserver-sdk/WebServerModule/Apache/libmod_apache_otel22.so
-AppDynamicsEnabled ON
-#AppDynamics Otel Exporter details
-AppDynamicsOtelSpanExporter otlp
-AppDynamicsOtelExporterEndpoint docker.for.mac.localhost:4317
-#AppDynamicsOtelSpanProcessor Batch
-#AppDynamicsOtelSampler AlwaysOn
-AppDynamicsServiceName Service_Apache_App-Up_Bugfix3
-AppDynamicsServiceNamespace OT_WEBSERVER_APP_Apache_Up-Bugfix3
-AppDynamicsServiceInstanceId 71410bPCIAW
-#AppDynamicsOtelMaxQueueSize 1024
-#AppDynamicsOtelScheduledDelayMillis 3000
-#AppDynamicsOtelExportTimeoutMillis 30000
-#AppDynamicsOtelMaxExportBatchSize 1024
-AppDynamicsResolveBackends ON
-AppDynamicsTraceAsError ON
-AppDynamicsReportAllInstrumentedModules OFF
-#AppDynamicsWebserverContext electronics e-commerce 71410b7jan13
-#AppDynamicsMaskCookie ON
-#AppDynamicsCookieMatchPattern PHPSESSID
-#AppDynamicsMaskSmUser ON
-#AppDynamicsDelimiter /
-#AppDynamicsSegment 2,3
-#AppDynamicsMatchfilter CONTAINS
-#AppDynamicsMatchpattern myapp
+ApacheModuleEnabled ON
+
+#ApacheModule Otel Exporter details
+ApacheModuleOtelSpanExporter otlp
+ApacheModuleOtelExporterEndpoint docker.for.mac.localhost:4317
+
+# SSL Certificates
+#ApacheModuleOtelSslEnabled ON
+#ApacheModuleOtelSslCertificatePath 
+
+#ApacheModuleOtelSpanProcessor Batch
+#ApacheModuleOtelSampler AlwaysOn
+#ApacheModuleOtelMaxQueueSize 1024
+#ApacheModuleOtelScheduledDelayMillis 3000
+#ApacheModuleOtelExportTimeoutMillis 30000
+#ApacheModuleOtelMaxExportBatchSize 1024
+
+ApacheModuleServiceName DemoService
+ApacheModuleServiceNamespace DemoServiceNamespace
+ApacheModuleServiceInstanceId DemoInstanceId
+
+ApacheModuleResolveBackends ON
+ApacheModuleTraceAsError ON
+#ApacheModuleWebserverContext DemoService DemoServiceNamespace DemoInstanceId
+
+#ApacheModuleSegmentType custom
+#ApacheModuleSegmentParameter 15,1,6,7
